# WAULT_PROTOCOL_SOLESTATE

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  README_EN.md  README_RU.md  package.json  tsconfig.json
.devcontainer/: devcontainer.json
app/: package.json  tailwind.config.js
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/create/: page.tsx
app/src/app/explore/: page.tsx
app/src/app/marketplace/: page.tsx
app/src/app/portfolio/: page.tsx
app/src/components/asset/: AssetCard.tsx  FractionPurchase.tsx  RevenueChart.tsx
app/src/components/common/: LoadingSpinner.tsx  StatCard.tsx  TransactionToast.tsx
app/src/components/layout/: Footer.tsx  Header.tsx  Sidebar.tsx
app/src/hooks/: useAssets.ts  useMarketplace.ts  useOracle.ts  usePortfolio.ts  useWaultProgram.ts
app/src/lib/: constants.ts  program.ts  types.ts  utils.ts
app/src/services/: ipfs.service.ts  pricing.service.ts
docs/: API.md  ARCHITECTURE.md  USER_GUIDE.md
oracle/: package.json
oracle/src/: config.ts  index.ts  scheduler.ts
oracle/src/providers/: document-verification.ts  property-valuation.ts  rental-income.ts
programs/wault/: Cargo.toml
programs/wault/src/: errors.rs  events.rs  lib.rs  state.rs
programs/wault/src/instructions/: buy_listed_fractions.rs  claim_revenue.rs  create_asset.rs  distribute_revenue.rs  initialize_platform.rs  list_fractions.rs  mint_fractions.rs  mod.rs  purchase_fractions.rs  update_oracle.rs  verify_asset.rs
scripts/: create-demo-assets.ts  deploy.sh  init-platform.ts  setup-codespace.sh
tests/: wault.test.ts
(+9 files in other folders)
