[package]
name = "wault"
version = "0.1.0"
description = "WAULT - Real-World Asset Tokenization Protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = "1.18"